WIP : desktop bug on mobile

--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -112,6 +112,8 @@
     margin: 0 auto;
     max-width: 100%;
     max-height: 100%;
+    height: 100%;
+    width: 100%;
   }
 
   &--illu--container,
