--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -5,15 +5,15 @@
   background-color: #1E1E1E;
   height: 100vh;
   width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: block;
+  box-sizing: border-box;
 }
 
 #app-wrapper {
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   width: 100%;
+  box-sizing: border-box;
 }
 
 .App {
